afsctool: link with MacPorts zlib even when building universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@71649 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/afsctool/Portfile
+++ b/dports/sysutils/afsctool/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 name            afsctool
 version         1.6.4
 set distversion 34
+revision        1
 categories      sysutils
 platforms       macosx
 license         GPLv3
@@ -39,11 +40,12 @@ universal_variant yes
 
 build {
     if {![variant_isset universal]} {
-        set flags "${configure.cflags} ${configure.ldflags} ${configure.ld_archflags}"
+        set archflags ${configure.cc_archflags}
     } else {
-        set flags "${configure.universal_cflags} ${configure.universal_ldflags}"
+        set archflags ${configure.universal_cflags}
     }
-    system "cd ${worksrcpath} && ${configure.cc} ${flags} -lz -framework CoreServices -o afsctool afsctool.c"
+    ui_msg "cd ${worksrcpath} && ${configure.cc} ${configure.cflags} ${configure.ldflags} ${archflags} -lz -framework CoreServices -o afsctool afsctool.c"
+    system "cd ${worksrcpath} && ${configure.cc} ${configure.cflags} ${configure.ldflags} ${archflags} -lz -framework CoreServices -o afsctool afsctool.c"
 }
 
 destroot {
