yelp:   * update to version 2.30.1   * dependencies and configuration   * i386 and ppc only due to xulrunner   * won't build 32 bit on 64 bit systems     due to known problems with xulrunner,     nss, etc.   * a work in progress -- help appreciated.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71651 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/yelp/Portfile
+++ b/dports/gnome/yelp/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            yelp
-version         2.26.0
+version         2.30.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Help browser for GNOME.
 long_description Yelp is the default help browser for the \
@@ -14,23 +14,30 @@ long_description Yelp is the default help browser for the \
 maintainers     devans openmaintainer
 categories      gnome
 platforms       darwin
+supported_archs i386 ppc
 homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     3413fd051c5ecbfe98819a8fb4ac83dd \
-                sha1    c1c3262d77d4515a0fd0a7840307533fda9ed0ea \
-                rmd160  5f6f3f7b504d7522a39ba9e55e22cf2ca75589d7
+checksums       md5     afd638cdaea1fcb9821ece88b819a022 \
+                sha1    941b4c3aecd379ea2ff26d12a37efe32afbf0ab1 \
+                rmd160  a8529e8cbdb021690bcc8a399a1d1b14b0e964ad
 
 depends_build   port:pkgconfig \
                 port:intltool \
-                port:p5-xml-parser \
                 port:gnome-doc-utils
 
-depends_lib     port:libgnomeui \
+depends_lib     port:gconf \
                 port:startup-notification \
-                port:rarian \
                 path:lib/pkgconfig/libxul.pc:xulrunner
-
+#
+# TODO: make this build 32 bits on 64 bit platforms
+#       to accomodate xulrunner
+#
+#       currently only builds correctly on 32 bit platforms
+#       due to problems with xulrunner and/or its dependencies
+#       (nss for instance).
+#
+#       see https://bugzilla.mozilla.org/show_bug.cgi?id=529878
 #
 # disabled dependency on lzmautils
 # to avoid a conflict with the newer
@@ -41,7 +48,8 @@ use_bzip2       yes
 
 configure.cppflags-append  -I${prefix}/include/nspr
 
-configure.args  --disable-schemas-install
+configure.args  --disable-schemas-install \
+                --with-search=basic
 
 variant debug description {Enables debugging} {
         configure.cflags-append -O0 -g
