--- a/dports/devel/svndumptool/Portfile
+++ b/dports/devel/svndumptool/Portfile
@@ -6,9 +6,12 @@ PortGroup               python25 1.0
 
 name                    svndumptool
 version                 0.6.1
+revision                1
 categories              devel
 platforms               darwin
 maintainers             ryandesign
+supported_archs         noarch
+
 homepage                http://svn.borg.ch/svndumptool/
 master_sites            ${homepage}${version}
 
@@ -35,7 +38,7 @@ livecheck.url           ${homepage}
 livecheck.regex         ${name}-(\[0-9.\]+)\\.tar
 
 post-destroot {
-    set docdir ${destroot}${prefix}/share/doc/${name}-${version}
+    set docdir ${destroot}${prefix}/share/doc/${name}
     xinstall -d ${docdir}
     xinstall -m 644 -W ${worksrcpath} \
         CHANGELOG.txt \
