--- a/dports/devel/gvfs/Portfile
+++ b/dports/devel/gvfs/Portfile
@@ -6,6 +6,7 @@ PortGroup       archcheck 1.0
 
 name            gvfs
 version         1.6.3
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      devel
@@ -71,7 +72,10 @@ configure.args  --disable-avahi \
 test.run        yes
 test.target     check
 
+destroot.keepdirs ${destroot}${prefix}/share/gvfs/remote-volume-monitors
+
 post-destroot {
+    xinstall -d ${destroot}${prefix}/share/gvfs/remote-volume-monitors
     set docdir ${prefix}/share/doc/${name}
     xinstall -d ${destroot}${docdir}
     xinstall -m 644 -W ${worksrcpath} AUTHORS COPYING MAINTAINERS NEWS README \
