--- a/dports/www/mediawiki/Portfile
+++ b/dports/www/mediawiki/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 name                mediawiki
 version             1.16.0
-revision            1
+revision            2
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          www php
 maintainers         blb openmaintainer
@@ -27,8 +27,7 @@ checksums           md5     0a2177b5eb4be2b5a585ab28070fec13 \
 depends_run         port:libiconv port:jpeg port:jasper port:tiff port:lcms \
                     port:libpng port:freetype port:libxml2 port:jbigkit \
                     port:expat port:fontconfig port:ghostscript \
-                    port:ImageMagick port:pkgconfig port:aspell \
-                    port:php5-web
+                    port:ImageMagick port:aspell port:php5-web
 
 use_configure       no
 
