clutter-gtk: update to version 0.10.8, openmaintainer, with maintainers approval, closes #26500.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71659 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/clutter-gtk/Portfile
+++ b/dports/graphics/clutter-gtk/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            clutter-gtk
-version         0.10.2
+version         0.10.8
 set branch      [string range $version 0 [expr [string last "." $version] - 1]]
 categories      graphics
 description     Clutter GTK integration library.
@@ -12,14 +12,14 @@ long_description Clutter-GTK is a library providing facilities to \
                  integrate Clutter into GTK+ applications. It provides \
                  a GTK+ widget, GtkClutterEmbed, for embedding the \
                  default ClutterStage into any GtkContainer.
-maintainers     nodamage.com:nodamage
+maintainers     nodamage.com:nodamage openmaintainer
 platforms       darwin
 homepage        http://www.clutter-project.org/
 master_sites    http://www.clutter-project.org/sources/${name}/${branch}/
 
-checksums       md5     1203dbf7091bbde0ca36053a95d9d18d \
-                sha1    55db953a4059ee611f1915018da0862e5036f242 \
-                rmd160  d3ccd9460f0083a12d03aa401d5526f75b2eb3c1
+checksums       md5     2233c7f92535f5017accea04701131cd \
+                sha1    91dc92c06ab6feff4d99d3bf5cce374c48a2f14b \
+                rmd160  6c24adcd11029d8d5172af28a9429238d009b9b4
 
 depends_build \
     port:pkgconfig
@@ -27,4 +27,9 @@ depends_build \
 depends_lib \
     port:gtk2 \
     port:clutter
- 
+
+configure.args  --enable-introspection=no
+
+livecheck.type  regex
+livecheck.url   http://www.clutter-project.org/sources/${name}/${branch}/
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
