devel/bzr-rebase: Disable livecheck as it was replaced_by bzr-rewrite
git-svn-id: https://svn.macports.org/repository/macports/trunk@71668 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/bzr-rebase/Portfile
+++ b/dports/devel/bzr-rebase/Portfile
@@ -28,5 +28,4 @@ depends_lib-append  port:bzr
 
 universal_variant   no
 
-livecheck.type      regex
-livecheck.regex     {Latest version is (\d+\.\d+(?:\.\d+)?)}
+livecheck.type      none
