firefox-x11: fix dependency typo.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71679 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/firefox-x11/Portfile
+++ b/dports/www/firefox-x11/Portfile
@@ -167,7 +167,7 @@ variant internal_dependencies description {Use internal versions of nspr, nss, a
 	--enable-libxul
 
     depends_lib-delete \
-	port:xulrunner-devel
+	port:xulrunner
 
     depends_lib-append \
 	port:heimdal \
