libmsn: update to 4.1, use cmake portgroup, add openssl dependency, update homepage; see #26533
git-svn-id: https://svn.macports.org/repository/macports/trunk@71681 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/libmsn/Portfile
+++ b/dports/net/libmsn/Portfile
@@ -1,8 +1,10 @@
 # $Id$
 
 PortSystem 1.0
+PortGroup cmake 1.0
+
 name             libmsn
-version          3.2
+version          4.1
 categories       net
 maintainers      nomaintainer
 description      MSN Messenger library
@@ -10,7 +12,14 @@ long_description \
 	libmsn is a C++ library for Microsoft's MSN Messenger service. \
 	It provides a high-level interface that allows an application \
 	to access instant messaging features with ease.
-homepage         http://libmsn.bdash.net.nz/
+homepage         http://sourceforge.net/projects/libmsn/
 platforms        darwin
 master_sites     sourceforge
-checksums        md5 6f931cd98522cecae823072f0e346879
+
+checksums        md5 769d3cf0e5625263fbc23321c1ddfcb0
+
+use_bzip2        yes
+
+depends_lib      port:openssl
+
+patchfiles       patch-msntest.cpp.diff
