--- a/dports/net/libmsn/Portfile
+++ b/dports/net/libmsn/Portfile
@@ -1,25 +1,29 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
-PortGroup cmake 1.0
+PortSystem          1.0
+PortGroup           cmake 1.0
 
-name             libmsn
-version          4.1
-categories       net
-maintainers      nomaintainer
-description      MSN Messenger library
-long_description \
-	libmsn is a C++ library for Microsoft's MSN Messenger service. \
-	It provides a high-level interface that allows an application \
-	to access instant messaging features with ease.
-homepage         http://sourceforge.net/projects/libmsn/
-platforms        darwin
-master_sites     sourceforge
+name                libmsn
+version             4.1
+categories          net
+platforms           darwin
+maintainers         nomaintainer
 
-checksums        md5 769d3cf0e5625263fbc23321c1ddfcb0
+description         MSN Messenger library
 
-use_bzip2        yes
+long_description    libmsn is a C++ library for Microsoft's MSN Messenger \
+                    service. It provides a high-level interface that allows \
+                    an application to access instant messaging features with \
+                    ease.
 
-depends_lib      port:openssl
+homepage            http://sourceforge.net/projects/libmsn/
+master_sites        sourceforge
 
-patchfiles       patch-msntest.cpp.diff
+checksums           md5     769d3cf0e5625263fbc23321c1ddfcb0
+
+use_bzip2           yes
+
+depends_lib         port:openssl
+
+patchfiles          patch-msntest.cpp.diff
