yap: update to 6.0.5, fixes #10874 and #21337
git-svn-id: https://svn.macports.org/repository/macports/trunk@71683 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/yap/Portfile
+++ b/dports/lang/yap/Portfile
@@ -1,8 +1,9 @@
 # $Id$
 
 PortSystem	1.0
+
 name		yap
-version		5.0.1
+version		6.0.5
 categories	lang
 maintainers	mac.com:pmoura
 platforms	darwin
@@ -17,15 +18,21 @@ long_description	\
 		is largely compatible with the ISO-Prolog standard and    \
 		with Quintus and SICStus Prolog.
 
-homepage        http://www.ncc.up.pt/~vsc/Yap/
-master_sites    ${homepage}/current/ freebsd
-distname		Yap-${version}
-checksums		sha1 c59847655be140d113a2684383ef21a17aa14085
-patchfiles		patch-config.h.in
+homepage        http://www.dcc.fc.up.pt/~vsc/Yap/
+master_sites    ${homepage}
+checksums		sha1 1084b1630b48a430d60d6aee8e31914ecc6d5369 \
+                rmd160 b35264a7911c73d095426fb3790a104d41d44157
 
 depends_lib		port:readline port:gmp
 
-distname	Yap-${version}
+worksrcdir      yap-6
 
 configure.args	--enable-threads=yes --enable-coroutining=yes \
 			--with-gmp=${prefix} --with-readline=${prefix}
+
+if {${os.platform} == "darwin" && ${build_arch} == "x86_64"} {
+    configure.args-append --build=${build_arch}-apple-${os.platform}${os.version}
+}
+
+livecheck.url   ${homepage}downloads.html
+livecheck.regex {yap-([0-9.]+)}
