p5-locale-gettext: once and for all, build correctly for universal and for single-architecture builds; see #19381
git-svn-id: https://svn.macports.org/repository/macports/trunk@71687 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-locale-gettext/Portfile
+++ b/dports/perl/p5-locale-gettext/Portfile
@@ -2,9 +2,9 @@
 
 PortSystem      1.0
 PortGroup       perl5 1.0
-revision        2
 
 perl5.setup     Locale-gettext 1.05
+revision        3
 set my_name		gettext
 distname        ${my_name}-${version}
 
@@ -22,16 +22,14 @@ checksums       md5 f3d3f474a1458f37174c410dfef61a46 \
 depends_lib-append     port:gettext port:libiconv
 
 if {[variant_isset universal]} {
-    set CFLAGS "-I${prefix}/include ${configure.universal_cflags}"
+    set archflags ${configure.universal_cflags}
 } else {
-    set CFLAGS "-I${prefix}/include ${configure.cc_archflags}"
+    set archflags ${configure.cc_archflags}
 }
-set LDFLAGS    "-L${prefix}/lib"
 
 patchfiles      patch-Makefile.PL
-post-patch {
-    reinplace "s|-lintl|${CFLAGS} ${LDFLAGS} -lintl|g" ${worksrcpath}/Makefile.PL
-}
+
+configure.cc    ${configure.cc} ${configure.cflags} ${configure.ldflags} ${archflags}
 
 livecheck.type  regex
 livecheck.url   ${homepage}
