--- a/dports/science/cdo/Portfile
+++ b/dports/science/cdo/Portfile
@@ -4,17 +4,17 @@
 PortSystem                  1.0
 
 name                        cdo
-version                     1.4.5.1
+version                     1.4.6
 platforms                   darwin
 maintainers                 takeshi
 license                     GPLv2
 categories                  science
 description                 Climate Data Operators
 homepage                    https://code.zmaw.de/projects/cdo
-master_sites                https://code.zmaw.de/attachments/download/307
-checksums                   md5     fe86f85725ba596a46e8b7fe16b74816 \
-                            sha1    56f293a1721e5ab8b82ca3f343d38508749d088a \
-                            rmd160  dd8cf3f1009f3382e6db68086630a1bf06f6cef7
+master_sites                https://code.zmaw.de/attachments/download/466
+checksums           md5     05ddb0481b39c30aa7f25a15405e7f9d \
+                    sha1    5aba7fff6950b9fd345bd036787b3ac5792283f3 \
+                    rmd160  59d992093b7ef3ab7c0de52380735b8c7fb37d81
 long_description \
     CDO is a collection of command line Operators               \
     to manipulate and analyse Climate Data files.               \
@@ -45,6 +45,7 @@ variant grib2 description {enable experimental grib2 support} {
     depends_lib-append      port:grib_api
     configure.args-append   --with-jasper=${prefix} \
                             --with-grib_api=${prefix}
+    configure.ldflags-append    -lpng -lopenjpeg
 }
 
 livecheck.type              regex
