gearmand: reformat Portfile
git-svn-id: https://svn.macports.org/repository/macports/trunk@71693 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/gearmand/Portfile
+++ b/dports/sysutils/gearmand/Portfile
@@ -1,38 +1,38 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
+PortSystem          1.0
 
-name                    gearmand
-version                 0.14
-description             framework for distributed computation
-long_description        Gearman provides a generic application framework \
-                        to farm out work to other machines or processes \
-                        that are better suited to do the work. It allows \
-                        you to do work in parallel, to load balance \
-                        processing, and to call functions between languages. \
-                        It can be used in a variety of applications, from \
-                        high-availability web sites to the transport of \
-                        database replication events. In other words, it \
-                        is the nervous system for how distributed \
-                        processing communicates.
-maintainers             medialize.de:rodney.rehm openmaintainer
-categories              sysutils
-platforms               darwin
-homepage                http://gearman.org/
-master_sites            https://launchpad.net/gearmand/trunk/${version}/+download/
+name                gearmand
+version             0.14
+categories          sysutils
+platforms           darwin
+
+description         Framework for distributed computation
+long_description    \
+        Gearman provides a generic application framework  to  farm  out  work \
+        to other machines or processes that are better suited to do the work. \
+        It allows you to do work in parallel,  to  load  balance  processing, \
+        and to call functions between languages.  It can be used in a variety \
+        of applications, from high-availability web sites to the transport of \
+        database replication events. In other words, it is the nervous system \
+        for how distributed processing communicates.
+
+maintainers         medialize.de:rodney.rehm openmaintainer
+homepage            http://gearman.org/
+master_sites        https://launchpad.net/gearmand/trunk/${version}/+download/
 
 checksums           md5     6e5e1f63c02745da174947bb3a44d8f9 \
                     sha1    11d1a3d530963861e53504582fc17c5184d249b8 \
                     rmd160  6b1c305fc830fac8d0eb6493016295bed609a9fe
 
-depends_lib             port:libevent
+depends_lib         port:libevent
 
-configure.args          --mandir=${prefix}/share/man \
-                        --with-libevent-prefix=${prefix} \
-                        --enable-threads
+configure.args      --mandir=${prefix}/share/man \
+                    --with-libevent-prefix=${prefix} \
+                    --enable-threads
 
-startupitem.create      yes
+startupitem.create  yes
 startupitem.executable  ${prefix}/sbin/gearmand -vv \
                         --port=4730 \
                         -u root \
