As a simplification, remove p5-xml-parser as a dependency when its dependent intltool is also declared.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71696 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/drivel/Portfile
+++ b/dports/gnome/drivel/Portfile
@@ -23,8 +23,7 @@ checksums       md5     9e6e4b2eb0912669461eb338d2bdc08d \
                 rmd160  28221060427d1a2cf7915f592b1ca9f01a33e145
 
 depends_build   port:pkgconfig \
-                port:intltool \
-                port:p5-xml-parser
+                port:intltool
                 
 depends_lib     port:libgnomeui \
                 port:gtksourceview \
