--- a/dports/gnome/drwright/Portfile
+++ b/dports/gnome/drwright/Portfile
@@ -19,8 +19,7 @@ checksums	md5 5056d36520b0a506e5bf3211f08315b8 \
 patchfiles	patch_src_dbus.c.diff
 
 depends_build   port:pkgconfig \
-                port:intltool \
-                port:p5-xml-parser
+                port:intltool
 
 depends_lib	port:gconf \
                 port:libglade2 \
