--- a/dports/gnome/gconf/Portfile
+++ b/dports/gnome/gconf/Portfile
@@ -29,8 +29,7 @@ checksums       md5     27663faf0af4f6a6d534de9270f6d24a \
                 rmd160  9ee3b6e68553997a128ca2b49992ddfbe157609b
 
 depends_build   port:pkgconfig \
-                port:intltool \
-                port:p5-xml-parser
+                port:intltool
 
 depends_lib     port:gtk2 \
                 port:dbus-glib \
