--- a/dports/gnome/gnome-doc-utils/Portfile
+++ b/dports/gnome/gnome-doc-utils/Portfile
@@ -31,8 +31,7 @@ use_parallel_build  no
 
 depends_build  \
     port:intltool \
-    port:pkgconfig \
-    port:p5-xml-parser
+    port:pkgconfig
 
 depends_lib    \
     port:gettext \
