--- a/dports/gnome/gwget/Portfile
+++ b/dports/gnome/gwget/Portfile
@@ -21,8 +21,7 @@ checksums               md5     b65ebc752cad068e747ae6ef45fafdcc \
                         rmd160  461bc7823aaf5043def1dbf15b07fb098216086d
 
 depends_build           port:pkgconfig \
-                        port:intltool \
-                        port:p5-xml-parser
+                        port:intltool
 
 depends_lib             port:gconf \
                         port:libgnomeui \
