--- a/dports/gnome/libgsf/Portfile
+++ b/dports/gnome/libgsf/Portfile
@@ -30,8 +30,7 @@ checksums               md5     2c15d875b1931c40c7e7a2368f3ed948 \
 
 depends_build           port:pkgconfig \
                         port:gconf \
-                        port:intltool \
-                        port:p5-xml-parser
+                        port:intltool
 
 depends_lib             port:libbonobo \
                         port:bzip2 \
