--- a/dports/gnome/policykit-gnome/Portfile
+++ b/dports/gnome/policykit-gnome/Portfile
@@ -22,8 +22,7 @@ checksums       md5     611cf39fba2945320fc7a9ec49087e69 \
                 rmd160  7c038c357a6df3d732bef28f7744768fb241092a
 
 depends_build   port:pkgconfig \
-                port:intltool \
-                port:p5-xml-parser
+                port:intltool
 
 depends_lib     port:gconf \
                 port:policykit
