--- a/dports/graphics/gimp2/Portfile
+++ b/dports/graphics/gimp2/Portfile
@@ -36,8 +36,7 @@ patchfiles      patch-etc-gimprc.diff \
                 patch-plug-ins-twain-tw_mac.c.diff
 
 depends_build   port:pkgconfig \
-                port:intltool \
-                port:p5-xml-parser
+                port:intltool
 
 depends_lib     port:iso-codes \
                 port:gegl \
