--- a/dports/net/tsclient/Portfile
+++ b/dports/net/tsclient/Portfile
@@ -17,8 +17,7 @@ checksums       md5     1dc95fbdbcf4344d05114e1f43bf32ea \
                 rmd160  b4263f667bdf6c4d1f4d5b10ccb77b3a1c356252
 
 depends_build   port:pkgconfig \
-                port:intltool \
-                port:p5-xml-parser
+                port:intltool
 
 depends_lib	port:gtk2 \
                 port:gnome-panel \
