gnome-desktop-suite: update to version 2.30.2.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71698 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-desktop-suite/Portfile
+++ b/dports/gnome/gnome-desktop-suite/Portfile
@@ -4,8 +4,7 @@
 PortSystem      1.0
 
 name            gnome-desktop-suite
-version         2.26.3
-revision        2
+version         2.30.2
 categories      gnome
 maintainers     devans openmaintainer
 description     The GNOME desktop environment
@@ -15,7 +14,7 @@ long_description \
                 The desktop environment is one of the suites of software packages that form \
                 the complete GNOME project offerings.
 
-homepage        http://live.gnome.org/TwoPointTwentyfive/Desktop
+homepage        http://live.gnome.org/TwoPointTwentynine/Desktop
 master_sites
 platforms       darwin
 
@@ -25,19 +24,31 @@ platforms       darwin
 # The following modules are included in the current GNOME desktop
 # environment specification but have not yet been ported to MacPorts
 #
+# at-spi2-atk
+# at-spi2-core
+# brasero  (no support for darwin Mac OS X, requires Linux SG or BSD CAM)
+# cheese   (requires Video4Linux or  V4L2)
 # deskbar-applet
+# ekiga (requires Video4Linux or  V4L2)
 # evolution
 # evolution-exchange
 # evolution-mapi
 # evolution-webcal
+# gnome-bluetooth
 # gnome-desktop-sharp
+# gnome-disk-utility
 # gnome-nettool
+# gnome-packagekit
 # gnome-power-manager
 # gnome-screensaver
+# gnome-system-tools
 # gnome-user-share
 # gok
+# hampster-applet
 # mousetweaks
+# nautilus-sendto
 # orca
+# sound-juicer (depends on brasero)
 # swfdec-gnome
 # tomboy
 # vinagre
@@ -48,17 +59,16 @@ platforms       darwin
 # environment specification and have been ported to MacPorts but
 # are currently broken and/or need to be updated
 #
-# brasero  (no support for darwin Mac OS X, requires Linux SG or BSD CAM)
-# cheese   (requires Video4Linux or  V4L2)
-# ekiga (requires Video4Linux or  V4L2)
-# sound-juicer (depends on brasero)
+# gnome-netstatus (builds but doesn't work -- tries to open /proc/net/dev)
+# gnome-system-monitor (builds but segfaults on processes/resources -- probably due to lack of support for MacOSX in libgtop)
+#
 
 depends_lib     \
                 port:alacarte \
                 port:bug-buddy \
                 port:dasher \
-                port:eog \
                 port:empathy \
+                port:eog \
                 port:epiphany \
                 port:evince \
                 port:evolution-data-server \
@@ -75,7 +85,6 @@ depends_lib     \
                 port:gnome-games \
                 port:gnome-icon-theme \
                 port:gnome-keyring \
-                port:gnome-netstatus \
                 port:gnome-mag \
                 port:gnome-media \
                 port:gnome-menus \
@@ -83,21 +92,21 @@ depends_lib     \
                 port:gnome-python-desktop \
                 port:gnome-session \
                 port:gnome-settings-daemon \
-                port:gnome-sharp2 \
                 port:gnome-speech \
-                port:gnome-system-monitor \
                 port:gnome-terminal \
                 port:gnome-themes \
                 port:gnome-user-docs \
                 port:gnome-utils \
-                port:gstreamer \
                 port:gst-plugins-base \
                 port:gst-plugins-good \
+                port:gstreamer \
                 port:gtk-engines2 \
+                port:gvfs \
                 port:libgtkhtml3 \
                 port:gtksourceview2 \
                 port:gucharmap \
                 port:libgail-gnome \
+                port:libgnome-keyring \
                 port:libgnomekbd \
                 port:libgtop \
                 port:libgweather \
@@ -107,14 +116,12 @@ depends_lib     \
                 port:libwnck \
                 port:metacity \
                 port:nautilus \
-                port:py25-pygtksourceview \
+                port:py26-pygtksourceview \
                 port:seahorse \
                 port:seahorse-plugins \
                 port:totem \
                 port:totem-pl-parser \
                 port:vino \
-                port:vte \
-                port:yelp \
                 port:zenity
 
 #
@@ -130,16 +137,31 @@ depends_lib-append \
                 port:libgnomeprintui
 
 #
+# these only build on 32 bit systems for now
+#
+
+if { ${configure.build_arch} == "i386" || ${configure.build_arch} == "ppc" } {
+    depends_lib-append \
+                port:yelp \
+                port:gnome-sharp2
+#
 # mono fails on leopard ppc - #17996
 #
 
-if {"darwin" == ${os.platform} && 9 == ${os.major} && ${configure.build_arch} == "ppc"} {
+    if {"darwin" == ${os.platform} && 9 == ${os.major} && ${configure.build_arch} == "ppc"} {
 	depends_lib-delete port:gnome-sharp2
+    }
 }
 
 distfiles
 use_configure   no
 build           { }
+
+variant broken description {Build ports that are broken or need work} {
+    depends_lib-append \
+                port:gnome-netstatus \
+                port:gnome-system-monitor
+}
 
 destroot        {
     file mkdir ${destroot}${prefix}/share/doc/gnome
@@ -147,9 +169,9 @@ destroot        {
     reinplace "s|@PREFIX@|${prefix}|g" ${destroot}${prefix}/share/doc/gnome/README.${name}.txt
 }
 
-post-activate        {
-    ui_msg "\nTo start gnome put \"exec gnome-session\" in your .xinitrc"
-    ui_msg "See also http://trac.macports.org/wiki/GNOME\n"
-}
+notes "
+To start GNOME put \"exec gnome-session\" in your .xinitrc
+See also http://trac.macports.org/wiki/GNOME
+"
 
 livecheck.type  none
