gnome-desktop-suite: add vte.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71699 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-desktop-suite/Portfile
+++ b/dports/gnome/gnome-desktop-suite/Portfile
@@ -122,6 +122,7 @@ depends_lib     \
                 port:totem \
                 port:totem-pl-parser \
                 port:vino \
+                port:vte \
                 port:zenity
 
 #
