facter: maintainer update to 1.5.8 (#26548) and add "supported_archs noarch"
git-svn-id: https://svn.macports.org/repository/macports/trunk@71702 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/facter/Portfile
+++ b/dports/sysutils/facter/Portfile
@@ -4,9 +4,10 @@
 PortSystem          1.0
 
 name                facter
-version             1.5.7
+version             1.5.8
 categories          sysutils
 maintainers         explanatorygap.net:nigel openmaintainer
+supported_archs     noarch
 
 description         A cross-platform library for describing OS attributes.
 
@@ -22,9 +23,9 @@ platforms           darwin
 
 master_sites        http://reductivelabs.com/downloads/facter/
 
-checksums           md5     21db7b613fe14a54e72ef062f3d5e190 \
-                    sha1    d904d1d02341d12df5ae8183f5552bd7fab18be6 \
-                    rmd160  98855a5129868a3d695c45daf80f8badaa90c566
+checksums           md5     4dd4daebc59fa985b8aa7eb247ac4030 \
+                    sha1    056449d7cdbac4289de14e871da047c0fd081d96 \
+                    rmd160  7b6405702980d1e9b19b47f46329ffab5660b3bd
 
 depends_lib         port:ruby
 
