libassuan: add libgpg-error dependency; see #26546
git-svn-id: https://svn.macports.org/repository/macports/trunk@71703 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libassuan/Portfile
+++ b/dports/devel/libassuan/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name        libassuan
 version     2.0.1
+revision    1
 categories  devel
 maintainers nomaintainer
 description Assuan IPC Library
@@ -23,7 +24,8 @@ checksums   md5     53a7d4c22af909d7236d17d454ef935b\
             sha1    b7e9dbd41769cc20b1fb7db9f2ecdf276ffc352c\
             rmd160  2064f7f977f7084ba4780e0a87de0c808ee6f680
 
-depends_lib port:pth
+depends_lib port:pth \
+            port:libgpg-error
 
 use_parallel_build yes
 
