--- a/dports/devel/libassuan/Portfile
+++ b/dports/devel/libassuan/Portfile
@@ -33,5 +33,5 @@ test.run    yes
 test.target check
 
 livecheck.type  regex
-livecheck.url   http://mirrors.rootmode.com/ftp.gnupg.org/${name}/?O=D
+livecheck.url   http://www.mirrorservice.org/sites/ftp.gnupg.org/gcrypt/${name}/
 livecheck.regex ${name}-(\\d+\\.\\d+\\.\\d+)
