nodejs: fix livecheck; see #26551
git-svn-id: https://svn.macports.org/repository/macports/trunk@71707 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/nodejs/Portfile
+++ b/dports/devel/nodejs/Portfile
@@ -42,3 +42,6 @@ test.run                yes
 #    depends_lib-append      port:asciidoc \
 #                            port:libxslt
 #}
+
+livecheck.type      regex
+livecheck.regex     ">node-v(\\d+(?:\\.\\d+)*)${extract.suffix}<"
