puppet: maintainer update to 2.6.1 (#26549) and add "supported_archs noarch"
git-svn-id: https://svn.macports.org/repository/macports/trunk@71708 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/puppet/Portfile
+++ b/dports/sysutils/puppet/Portfile
@@ -4,9 +4,10 @@
 PortSystem          1.0
 
 name                puppet
-version             0.25.4
+version             2.6.1
 categories          sysutils
 maintainers         explanatorygap.net:nigel openmaintainer 
+supported_archs     noarch
 
 description         Puppet is a configuration management solution.
 
@@ -21,9 +22,9 @@ platforms           darwin
 
 master_sites        http://reductivelabs.com/downloads/puppet/
 
-checksums           md5     69c97019fda5620f9f45f6ad64407e3b \
-                    sha1    290dcc20eb670b5b8e26d50301430e1333a037ab \
-                    rmd160  67610414d6e5c41e9541eb7f392f391b94f1802e
+checksums           md5     5cbdc667722ae60bbc24acca2e3494d6 \
+                    sha1    690bc99452662f37d465bd713141b890f30bacae \
+                    rmd160  1074c62027321fd7a5ea6837ce112bba622b3dd6
 
 depends_lib         port:ruby \
                     port:facter
