--- a/dports/sysutils/puppet/Portfile
+++ b/dports/sysutils/puppet/Portfile
@@ -4,6 +4,7 @@
 PortSystem          1.0
 
 name                puppet
+conflicts           cln
 version             2.6.1
 categories          sysutils
 platforms           darwin
