--- a/dports/devel/nodejs/Portfile
+++ b/dports/devel/nodejs/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 
 name                    nodejs
-version                 0.2.0
+version                 0.2.2
 categories              devel net
 platforms               darwin
 maintainers             gmail.com:ceager openmaintainer
@@ -19,14 +19,20 @@ long_description        Node's goal is to provide an easy way to build scalable 
 homepage                http://nodejs.org/
 master_sites            ${homepage}dist/
 
-checksums               md5     99a6dacc44b3f9c6ec376ccb446dd0b8 \
-                        sha1    79e52937f5fa6f233985d766f137b4b8f22481b2 \
-                        rmd160  265fdb4788dbc1278aaec9d1b2b64ba2c331e1ab
+checksums               md5     cccdad01d9c7bc2d62190e3146e43396 \
+                        sha1    4b8a734008ed3e9ba10d72c4f8a60ae56395d992 \
+                        rmd160  59ff652d0c484e7cb1a9da40215e47df82deb661
 
 distname                node-v${version}
 
-depends_lib-append      port:gnutls \
-                        port:openssl
+configure.args          --without-ssl
+
+variant ssl description {Add secure socket layer support} {
+    depends_lib-append      port:openssl
+    configure.args-delete   --without-ssl
+}
+
+default_variants        +ssl
 
 # V8 only supports ARM and IA-32 processors
 universal_variant       no
