Io: build as root due to internal use of sudo
git-svn-id: https://svn.macports.org/repository/macports/trunk@71715 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/Io/Portfile
+++ b/dports/lang/Io/Portfile
@@ -21,6 +21,8 @@ git.url         git://github.com/stevedekorte/io.git
 git.branch      e8b4edef6cb9eb21f0de279bd761bee0b89f5ecb
 
 use_configure   no
+# Makefile runs "sudo make install", which asks for a password if not root
+build.asroot    yes
 pre-build {
     system "cd ${worksrcpath} && make"
 }
@@ -34,4 +36,3 @@ destroot {
     system "cd ${worksrcpath} && make addons INSTALL_PREFIX=${destroot}${prefix}"
     system "cd ${worksrcpath} && make install INSTALL_PREFIX=${destroot}${prefix}"
 }
-
