--- a/dports/math/qrupdate/Portfile
+++ b/dports/math/qrupdate/Portfile
@@ -108,7 +108,7 @@ if {![variant_isset gcc43] && ![variant_isset gcc44] && \
 }
 
 if {[variant_isset g95]} {
-    default_variants +accelerate
+    default_variants +no_atlas
 }
 
 test.run yes
