--- a/dports/perl/p5-gd/Portfile
+++ b/dports/perl/p5-gd/Portfile
@@ -2,19 +2,20 @@
 
 PortSystem		1.0
 PortGroup		perl5 1.0
-perl5.setup		GD 2.35
-revision		0
+perl5.setup		GD 2.45
 maintainers		stechert openmaintainer
 description		Module interface to libgd
 long_description	${description}
 
 platforms			darwin
 
-checksums           md5     dfc3e16e85a17aab7ee1029fbe307fca \
-                    sha1    50d72d10ae192932b227f68769caa56f298afb4b
+checksums           sha1    27c71bded682ccabb0c1429bb28e6c2bbae78e8d \
+                    rmd160  13e85ae27c8f661d8c470ec7dd388ffb71771100
 
 
 depends_lib-append		port:gd2
+
+universal_variant no
 
 ## configure.post_args	-options "JPEG,FT,PNG" -lib_gd_path ${prefix}/lib/libgd.dylib \
 ## 			LIBS="-lXpm -lX11 -ljpeg -lfreetype -lpng12 -lz -liconv -lgd"
