p5-data-stag: add missing required and optional dependencies
git-svn-id: https://svn.macports.org/repository/macports/trunk@71719 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-data-stag/Portfile
+++ b/dports/perl/p5-data-stag/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 PortGroup           perl5 1.0
 
 perl5.setup         Data-Stag 0.11 Data/CMUNGALL/
+revision            1
 maintainers         tonym.us:tonym openmaintainer
 platforms           darwin
 supported_archs     noarch
@@ -19,6 +20,13 @@ long_description    This module is for manipulating data as hierarchical \
 checksums           md5     6bfa3cf196b69180d04602e956f8b626 \
                     sha1    c18c48ba794f47537d98dcc32e33d0d21a09ee44 \
                     rmd160  45c92b1b299b836786f6d0da26cb7a1040317cbf
+
+depends_lib-append  port:p5-io-string \
+                    port:p5-xml-libxslt \
+                    port:p5-libxml-perl \
+                    port:p5-mldbm \
+                    port:p5-gd \
+                    port:p5-graph
 
 test.run            yes
 test.cmd            make
