--- a/dports/multimedia/mlt/Portfile
+++ b/dports/multimedia/mlt/Portfile
@@ -5,8 +5,7 @@ PortSystem          1.0
 
 name                mlt
 epoch               1
-version             0.5.6
-revision            1
+version             0.5.10
 categories          multimedia
 maintainers         dennedy.org:dan
 description         Open source multimedia framework - core libraries
@@ -20,12 +19,11 @@ long_description    MLT is an open source multimedia framework, designed and dev
                     This package contains the files necessary for running applications that use \
                     the MLT multimedia framework.
 homepage            http://www.mltframework.org
+master_sites        sourceforge
 platforms           darwin
 
-fetch.type          git
-git.url             git://mltframework.org/mlt.git
-git.branch          v${version}
-worksrcdir          mlt
+checksums           sha1    e0b3d8f77ad6d97d6495614e78dfbbb531e70f77 \
+                    rmd160  015053ddb98175adc905d2ccf29ae962f295a9bb
 
 # ffmpeg-devel is not universal
 universal_variant   no
@@ -36,7 +34,7 @@ depends_build       port:pkgconfig \
 
 depends_lib         port:atk \
                     port:frei0r-plugins \
-                    port:ffmpeg-devel \
+                    path:lib/libavcodec.dylib:ffmpeg \
                     port:gtk2 \
                     port:libdv \
                     port:libsamplerate \
@@ -50,6 +48,12 @@ configure.args      --enable-gpl \
                     --qimage-includedir=${prefix}/libexec/qt4-mac/include/Qt \
                     --disable-jackrack \
                     --disable-mmx
+
+platform darwin 10 {
+    if { ${build_arch} == "x86_64" } {
+        configure.args-delete --disable-mmx
+    }
+}
 
 configure.pkg_config_path   ${prefix}/lib/pkgconfig:${prefix}/libexec/qt4-mac/lib/pkgconfig
 configure.pkg_config        ${prefix}/bin/pkg-config
@@ -67,4 +71,6 @@ variant no_x11 {
     depends_lib-delete      port:gtk2
 }
 
-livecheck.type     none
+livecheck.type      regex
+livecheck.url       http://sourceforge.net/projects/${name}/files/
+livecheck.regex     /${name}-(\[0-9.\]+)${extract.suffix}
