libgdiplus: update to 2.6.7 and add cairo dependency; see #24501
git-svn-id: https://svn.macports.org/repository/macports/trunk@71721 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libgdiplus/Portfile
+++ b/dports/devel/libgdiplus/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name		libgdiplus
-version		2.6
-revision        1
+version		2.6.7
 categories	devel
 platforms	darwin
 maintainers	stechert openmaintainer
@@ -17,9 +16,8 @@ homepage	http://www.mono-project.com/Libgdiplus
 master_sites	http://www.go-mono.com/sources/libgdiplus/
 use_bzip2	yes
 
-checksums       md5     9107b4429fdafde914bd23405544c58d \
-                sha1    170836d0cb99812b1838e0207a844ac7f9e4232b \
-                rmd160  25f5680dae2f5515c6e69229541ede4bdcb381ef
+checksums       sha1    bc985e95b79327f224580263671173ef369dc074 \
+                rmd160  577a2815562c1c2bd2adf50f707354fba2aaf2f3
 
 depends_build   port:pkgconfig
 
@@ -32,6 +30,7 @@ depends_lib	port:jpeg \
 		port:libiconv \
 		port:libexif \
 		path:lib/pkgconfig/glib-2.0.pc:glib2 \
+		path:lib/pkgconfig/cairo.pc:cairo \
 		port:xorg-libsm \
 		port:xrender
 
