erlang: add odbc variant, closes #12649
git-svn-id: https://svn.macports.org/repository/macports/trunk@71722 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/erlang/Portfile
+++ b/dports/lang/erlang/Portfile
@@ -69,7 +69,8 @@ configure.args  --prefix=${prefix}	            \
                 --enable-dynamic-ssl-lib        \
                 --enable-smp-support            \
                 --enable-hipe                   \
-                --disable-ssl
+                --disable-ssl                   \
+                --without-odbc
 
 depends_build   port:gawk
 
@@ -120,6 +121,12 @@ variant ssl description {Build SSL support}	{
 
 variant nohipe description {Disable HiPE (native-code bytecode compiler)}   {
 	configure.args-delete   --enable-hipe
+}
+
+variant odbc description {Build ODBC support} {
+    depends_lib             port:unixODBC
+    configure.args-delete   --without-odbc
+    configure.args-append   --with-odbc=${prefix}
 }
 
 # Livecheck 
