mono: update to 2.6.7 and disable parallel build (#26482)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71723 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/mono/Portfile
+++ b/dports/devel/mono/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 PortGroup archcheck 1.0
 
 name             mono
-version          2.6.4
+version          2.6.7
 categories       devel lang mono
 platforms        darwin
 license          GPLv2 LGPLv2 MIT
@@ -20,9 +20,8 @@ use_bzip2        yes
 universal_variant no
 supported_archs  i386 ppc
 
-checksums        md5     342a7ca3bea3cbec0c8ac48b9322fcb4 \
-                 sha1    c3b556e63cfa635687a40372a83e4a1b8fd10103 \
-                 rmd160  c5c12bd0226ff3b45bb8951bfb5c74415e81d6b1
+checksums        sha1    6528c009d344a21eb0898876369222a7fff76838 \
+                 rmd160  5825ad284e4123e4ddb8933637a3dbf5f57f7f5a
 
 depends_build    port:pkgconfig port:gawk
 depends_lib      port:gettext path:lib/pkgconfig/glib-2.0.pc:glib2 \
@@ -48,6 +47,8 @@ configure.args   --with-gc=included \
                  --without-sigaltstack \
                  --with-libgdiplus=${prefix} \
                  --disable-dtrace
+
+use_parallel_build no
 
 test.run         yes
 test.target      check
