vtk5: use depends_build-append instead of depends_build as the port uses the cmake portgroup; add dependencies on tcl and tk in tcltk variant; fixes #26554
git-svn-id: https://svn.macports.org/repository/macports/trunk@71724 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/vtk5/Portfile
+++ b/dports/graphics/vtk5/Portfile
@@ -26,7 +26,7 @@ checksums           [suffix vtk-${version}] \
                     sha1    355209c485304f1b0feefcda3585d45217ffd230 \
                     rmd160  b7abf3b9bb14a3db81608c7aa2721935ae653295
 
-depends_build   port:readline
+depends_build-append    port:readline
 distname    VTK
 
 use_parallel_build yes
@@ -91,6 +91,7 @@ variant x11 conflicts carbon qt4_mac description {Use X11} {
 }
 
 variant tcltk conflicts carbon description {Build with Tcl wrappers and Tk support} {
+    depends_lib-append port:tcl port:tk
     configure.args-delete \
         -DVTK_USE_TK:BOOL=OFF \
         -DVTK_WRAP_TCL:BOOL=OFF
