steghide: fix build with gettext 0.18; see #25014
git-svn-id: https://svn.macports.org/repository/macports/trunk@71725 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/steghide/Portfile
+++ b/dports/security/steghide/Portfile
@@ -22,7 +22,8 @@ configure.args      --mandir=${prefix}/share/man
 
 patchfiles          patch-build-with-gcc-4.diff \
                     patch-src-Makefile.am.diff \
-                    patch-src-Makefile.in.diff
+                    patch-src-Makefile.in.diff \
+                    patch-src-gettext.h.diff
 
 checksums           md5 5be490e24807d921045780fd8cc446b3 \
                     sha1 a6d204744fabfe5751ab5e2d889ac373c0b0a30c \
