pdf2djvu: fix build with gettext 0.18; see #25633
git-svn-id: https://svn.macports.org/repository/macports/trunk@71726 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/pdf2djvu/Portfile
+++ b/dports/graphics/pdf2djvu/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 name                pdf2djvu
 version             0.7.4
-revision            1
+revision            2
 categories          graphics textproc
 maintainers         nomaintainer
 description         Convert PDF to DjVu
@@ -27,9 +27,9 @@ depends_build       port:pkgconfig port:gsed
 
 depends_lib         port:djvulibre port:poppler port:libiconv port:GraphicsMagick
 
-patchfiles          patch-configure.diff patch-tools-xml2c.diff
-
-configure.args-append --disable-nls
+patchfiles          patch-configure.diff \
+                    patch-i18n.hh.orig \
+                    patch-tools-xml2c.diff
 
 configure.universal_args-delete --disable-dependency-tracking
 
