--- a/dports/multimedia/frei0r-plugins/Portfile
+++ b/dports/multimedia/frei0r-plugins/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                frei0r-plugins
 version             1.2
+revision            1
 categories          multimedia
 maintainers         dennedy.org:dan
 
@@ -36,3 +37,5 @@ universal_variant   no
 livecheck.type      regex
 livecheck.url       [lindex ${master_sites} 0]
 livecheck.regex     ${name}-(\[0-9.\]+)${extract.suffix}
+
+patchfiles          patch-Makefile.in.diff
