caml-sqlite3: update to 1.5.8, and disable universal because ocaml is not universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@71729 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/caml-sqlite3/Portfile
+++ b/dports/devel/caml-sqlite3/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 
 name                caml-sqlite3
-version             1.5.7
+version             1.5.8
 categories          devel ml databases
 maintainers         landonf stechert openmaintainer
 description         OCaml bindings for SQLite 3
@@ -15,13 +15,15 @@ master_sites        http://www.ocaml.info/ocaml_sources/
 
 distname            ocaml-sqlite3-${version}
 
-checksums           md5     a793b72638af42ae4149e050e5990a12 \
-                    sha1    e617ba1f139546864d77249176eceb1a268d9651 \
-                    rmd160  23f271624684a003fd9ed94f7038b9b78d39faae
+checksums           sha1    2100e5ff4350d9be8a10aee2bd36e0f55e6fd9da \
+                    rmd160  f85159d95f9a54093192558962fd7c3b9f835f9e
 
 depends_lib         port:ocaml \
                     port:caml-findlib \
                     port:sqlite3
+
+# ocaml is not universal
+universal_variant   no
 
 patchfiles          patch-Makefile.in
 
