--- a/dports/multimedia/kdenlive/Portfile
+++ b/dports/multimedia/kdenlive/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           kde4 1.0
 
 name                kdenlive
-version             0.7.7
+version             0.7.8
 categories          multimedia
 maintainers         dennedy.org:dan
 description         A non-linear video editing suite.
@@ -17,7 +17,8 @@ long_description    Kdenlive is a non-linear video editing suite, \
 homepage            http://kdenlive.sourceforge.net/
 master_sites        sourceforge
 platforms           darwin
-checksums           md5 64e8f8e19a8e7b18a2a87b85f6c0060e
+checksums           sha1    6fd6d50f9714974ec3f2ce04e8c978f839020f9a \
+                    rmd160  5ce3ffa5d4480c6da0672675b2ec3aa47ecac905
 
 depends_lib         port:mlt \
                     port:kdelibs4 \
@@ -25,6 +26,11 @@ depends_lib         port:mlt \
 
 depends_run         port:cdrtools \
                     port:dvdauthor
+
+# mlt is not universal
+universal_variant   no
+
+patchfiles          patch-src-colorcorrection-vectorscopegenerator.h.diff
 
 configure.args-append   ../${distname} \
                     -DNO_JOGSHUTTLE=1
