--- a/dports/python/py26-pyopencl/Portfile
+++ b/dports/python/py26-pyopencl/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           python26 1.0
 
 name                py26-pyopencl
-version             0.91.5
+version             0.92
 categories-append   science
 
 maintainers         stromnov openmaintainer
@@ -22,22 +22,17 @@ homepage            http://mathema.tician.de/software/pyopencl
 master_sites        http://cheeseshop.python.org/packages/source/p/pyopencl/
 distname            pyopencl-${version}
 
-checksums           md5     e09ad8c07b5412e965d6004ba3a644b8 \
-                    sha1    e616f1c63471154bb185d6502ee912cbbf7da4c5 \
-                    rmd160  e4e425d62384d9eada1661c2880c6c1dd003ddb9
-
-patchfiles          patch-wrap_cl.hpp.diff \
-                    patch-siteconf.py.diff
+checksums           md5     0680f7272fe3ab5a3bcb0b6cfbd74994 \
+                    sha1    5f683638328bc452e8ae5dceaf49c6059735fbca \
+                    rmd160  c0ba23fe00fdd5639bb0ba410c5eb7c6e16e601e
 
 depends_build-append \
                     port:py26-distribute \
-                    port:py26-numpy \
-                    port:boost
+                    port:py26-numpy
 
-post-patch {
-        reinplace "s|@@PREFIX@@|${prefix}|g" ${worksrcpath}/siteconf.py
-        reinplace "s|@@GCC@@|gcc|g" ${worksrcpath}/siteconf.py
-}
+use_configure       yes
+configure.cmd       ./configure.py
+configure.args      --cl-enable-gl
 
 livecheck.type      regex
 livecheck.url       ${master_sites}
