--- a/dports/devel/xmlwrapp/Portfile
+++ b/dports/devel/xmlwrapp/Portfile
@@ -17,11 +17,14 @@ long_description  xmlwrapp is a modern style C++ library for working with XML da
 homepage          http://sourceforge.net/project/showfiles.php?group_id=142403
 master_sites      sourceforge
 extract.suffix    .tgz
-depends_build     bin:perl5:perl5
-depends_lib       lib:libxml2:libxml2 \
-                  bin:xml2-config:libxml2 \
-                  lib:libxslt:libxslt \
-                  bin:xslt-config:libxslt
+
+depends_build     bin:perl:perl5
+
+depends_lib       port:libxml2 \
+                  port:libxml2 \
+                  port:libxslt \
+                  port:libxslt
+
 checksums         md5 99ba63b283762e749e1663014e5cb0fd
 
 patch.pre_args    -p1
