xmlwrapp: remove redundant dependencies
git-svn-id: https://svn.macports.org/repository/macports/trunk@71733 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/xmlwrapp/Portfile
+++ b/dports/devel/xmlwrapp/Portfile
@@ -20,10 +20,7 @@ extract.suffix    .tgz
 
 depends_build     bin:perl:perl5
 
-depends_lib       port:libxml2 \
-                  port:libxml2 \
-                  port:libxslt \
-                  port:libxslt
+depends_lib       port:libxslt
 
 checksums         md5 99ba63b283762e749e1663014e5cb0fd
 
